ablateOutputs/slurm-236114.out
  File "/p/lustre2/ubchrest/CMAME_Final/ablateOutputs/getQoIs.py", line 39
    print(dts)
    ^
SyntaxError: invalid syntax
